# bot-trader

./: .env.example  .gitignore  Dockerfile  Makefile  README.MD  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_backtest_trade_capital_fields.py  0003_trade_type.py  0004_strategy_interval.py  0005_strategy_risk_config.py  0006_delivery_metadata.py  0007_multitenancy.py
app/: config.py  dependencies.py  exceptions.py  logging.py  main.py
app/api/: router.py
app/api/middleware/: auth.py  rate_limit.py  request_id.py
app/api/v1/: admin.py  auth.py  backtests.py  billing.py  channels.py  outcomes.py  signals.py  strategies.py  subscriptions.py
app/channels/: __init__.py  base.py  discord.py  email.py  exchange.py  registry.py  slack.py  telegram.py  webhook.py  whatsapp.py
app/core/: backtest_engine.py  circuit_breaker.py  indicators.py  market_data.py  plan_limits.py  regime_detector.py
app/db/: redis.py  session.py
app/formatters/: __init__.py  base.py  discord.py  email.py  exchange.py  registry.py  slack.py  telegram.py  webhook.py  whatsapp.py
app/integrations/: cloudinary_upload.py  exchange_factory.py  google_sheets.py  local_export.py
app/models/: __init__.py  api_key.py  backtest.py  base.py  channel.py  delivery.py  outcome.py  signal.py  strategy.py  subscription.py  tenant.py
app/payments/: __init__.py  base.py  lemonsqueezy.py  paddle.py  registry.py  stripe.py
app/repositories/: api_key.py  backtest.py  base.py  channel.py  delivery.py  outcome.py  plan.py  signal.py  strategy.py  subscription.py  tenant.py
app/schemas/: api_key.py  backtest.py  channel.py  common.py  delivery.py  outcome.py  signal.py  strategy.py  subscription.py
app/services/: api_key_service.py  auth_service.py  backtest_service.py  billing_service.py  channel_service.py  delivery_service.py  outcome_service.py  plan_service.py  signal_service.py  strategy_service.py  subscription_service.py
app/strategies/: __init__.py  adx_trend.py  base.py  bollinger_breakout.py  ema_crossover.py  macd_rsi.py  registry.py  rsi_divergence.py  vwap_reversion.py
app/types/: __init__.py  channel_config.py  delivery.py  signal.py  strategy.py  subscription.py
app/types/channel_config/: __init__.py  _base.py  _exchange.py  _notification.py
app/workers/: compute_outcomes.py  deliver_outcomes.py  deliver_signal.py  health_check_channels.py  notify_neutral.py  retry_delivery.py  run_backtest.py  scheduled_signals.py  settings.py
backtest_exports/: 4abfa3a5-eecd-4d39-8b15-3f730420447e_ETH_MACD-RSI_4h_ETHUSD_4h.xlsx  4dad622a-6dbf-4131-a2e4-d401d397de9f_ETH_MACD-RSI_4h_ETHUSD_4h.xlsx
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/backtests/: page.tsx
frontend/src/hooks/: use-api-key.ts  use-auth.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/providers/: providers.tsx
scripts/: create_api_key.py  seed_owner.py
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/core/: test_circuit_breaker.py  test_indicators.py  test_regime_detector.py
tests/unit/services/: test_signal_service.py
tests/unit/strategies/: test_registry.py  test_strategies.py
tests/unit/types/: test_types.py
tests/unit/workers/: test_deliver_signal_helpers.py
(+31 files in other folders)
