[project]
name = "bot-trader"
version = "0.1.0"
requires-python = ">=3.12"
description = "Cryptocurrency signal delivery platform"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "arq>=0.26.0",
    "redis>=5.1.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "pandas-ta>=0.3.14b",
    "ccxt>=4.4.0",
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.33.0",
    "twilio>=9.3.0",
    "aiosmtplib>=3.0.0",
    "sendgrid>=6.11.0",
    "aiohttp>=3.10.0",
    "gspread-asyncio>=2.0.0",
    "google-auth>=2.35.0",
    "certifi>=2024.0.0",
    "cryptography>=43.0.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "python-dotenv>=1.0.1",
    "scalar-fastapi>=1.0.3",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "cloudinary>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "anyio[trio]>=4.6.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.0",
    "respx>=0.21.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C9", "PLR"]
ignore = [
    "PLR0913",   # too-many-arguments — common in service/repo layer
    "B008",      # Depends() in argument defaults — standard FastAPI pattern
    "PLR2004",   # magic-value comparisons — HTTP status codes and domain constants are readable in context
    "UP046",     # Generic[T] subclass style — mechanical 3.12 upgrade, deferred
    "E501",      # line too long — formatter handles display; long f-strings/URLs are acceptable
]

[tool.ruff.lint.per-file-ignores]
"app/core/market_data.py" = ["C901", "E741", "B905"]  # complex exchange fetch; l=low is OHLCV standard
"app/core/backtest_engine.py" = ["C901"]      # stateful simulation loop
"app/workers/deliver_signal.py" = ["C901", "PLR0912", "PLR0915", "PLR0911"]  # fan-out job — inherent branching
"app/workers/retry_delivery.py" = ["PLR0915"]  # retry state machine — linear but verbose
"app/formatters/email.py" = ["C901", "PLR0912", "PLR0915"]  # multi-section HTML formatter — unavoidable branches
"app/channels/exchange.py" = ["PLR0911"]      # gating method has multiple early-returns by design
"app/core/regime_detector.py" = ["UP042", "PLR0911", "PLR0912"]  # str+Enum pattern; classify returns per regime
"app/strategies/vwap_reversion.py" = ["PLR0911"]  # generate_signal returns per condition by design
"app/workers/run_backtest.py" = ["PLR0915", "C901"]   # backtest pipeline — sequential steps, unavoidably long

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.mypy]
python_version = "3.12"
strict = false
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
